--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -1,6 +1,6 @@
 .card{
-    width: 10%;
-    margin: 0 auto;
+    display: inline-block;
+    margin: 0 20px;
     text-align: center;
     color: #888;
 }
