--- a/src/components/HourlyForcast/HourlyForcast.css
+++ b/src/components/HourlyForcast/HourlyForcast.css
@@ -1,13 +1,20 @@
 .hourly-forcast{
-    border: 1px solid gray;
-    margin-top: 100px;
+    width: 60%;
+    margin: 50px auto;
+    text-align: center;
+}
+.hourly-forcast h3{
+    font-size: 2.5rem;
+    color: #333;
+    margin: 0;
 }
 .hourly-forcast ul{
-    margin: 0;
+    border: 1px solid gray;
+    margin: 40px auto;
     padding: 0;
     list-style: none;
 }
-.hourly-forcast div{
+.hourly-forcast li{
     display:flex;
     justify-content: space-around;
     border-bottom: 1px solid #ddd;
@@ -17,4 +24,10 @@
     padding: 0 7px;
     border-radius: 10px;
     color: #fff;
+}
+.hourly-forcast a{
+    display: inline-block;
+    text-decoration: none;
+    font-size: 2rem;
+    color: #333;
 }
